# voyage-AI-3rd

./: .gitignore
week1/: 기본과제_MNIST를_분류_모델로_학습하기.ipynb  심화과제 - MNIST 예측 모델에 deep learning techniques 적용하기.ipynb
week2/: [2주차]_기본과제_주어진_문장에서_나올_다음_단어를_예측하는_모델_구현.ipynb  [2주차]_심화과제_Multi_head_Attention으로_감정_분석_모델_구현하기.ipynb
week3/: Read.md  [3주차] 기본과제 - DistilBERT로 뉴스 기사 분류 모델 학습하기.ipynb  [3주차]_심화과제_Pre_trained_모델로_효율적인_NLP_모델_학습하기.ipynb
week4/: [4주차]_기본과제_HuggingFace로_두_문장의_논리적_모순_분류하기.ipynb  [4주차]_심화과제_수능_국어_문제_GPT_4로_풀어보기.ipynb  a.json  prompt.txt  result.txt  test.py
week5/: [5주차] 심화과제 - 다양한 형태의 입력을 가지는 LLM 서비스 개발.ipynb  [5주차]_기본과제_외부_블로그의_정보와_함께_챗봇_구현하기.ipynb
week6/: Neo4j로_Graph_Vector_Retriever_생성하기.ipynb  README.md  [6주차] 기본과제 - 이미지를 가지고 질의응답을 진행할 수 있는 챗봇 구현.py
week6/practice/: 6.1.py  6.2-1.py  6.2-2.py
week6/practice/6-2/: main.py  pyproject.toml
week7/: README.md  corpus.json  train.py  train2.py
week8/: README.md  train.py  심화과제_gemma_Lora_finetuning.ipynb
week8/wandb/latest-run/files/: wandb-metadata.json
week8/wandb/run-20250520_145258-a47fqt1e/: run-a47fqt1e.wandb
week8/wandb/run-20250520_145258-a47fqt1e/files/: config.yaml  wandb-metadata.json  wandb-summary.json
week8/wandb/run-20250520_145939-fef47pq5/: run-fef47pq5.wandb
week8/wandb/run-20250520_145939-fef47pq5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
week8/wandb/run-20250520_150631-pote3c03/: run-pote3c03.wandb
week8/wandb/run-20250520_150631-pote3c03/files/: config.yaml  requirements.txt  wandb-summary.json
