[project]
name = "6-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.30.2",
    "langchain>=0.3.24",
    "langchain-core>=0.3.56",
    "langchain-huggingface>=0.1.2",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
    "torch>=2.7.0",
]
